deploy/keycloak/deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-discovery
spec:
  selector:
    app: keycloak
  clusterIP: None
  type: ClusterIP
---
apiVersion: apps/v1
# Use a stateful setup to ensure that for a rolling update Pods are restarted with a rolling strategy one-by-one.
# This prevents losing in-memory information stored redundantly in two Pods.
kind: StatefulSet
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  serviceName: keycloak-discovery
  # Run with one replica to save resources, or with two replicas to allow for rolling updates for configuration changes
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.4.7
          args: ["start"]
          ports:
            - name: http
              containerPort: 8080
            - name: jgroups
              containerPort: 7800
            - name: jgroups-fd
              containerPort: 57800
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            periodSeconds: 1
            failureThreshold: 600              
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            periodSeconds: 10
            failureThreshold: 3              
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            periodSeconds: 10
            failureThreshold: 3              
          resources:
            limits:
              cpu: 2000m
              memory: 2000Mi
            requests:
              cpu: 500m
              memory: 1700Mi
# ---
# # This is deployment of PostgreSQL with an ephemeral storage for testing: Once the Pod stops, the data is lost.
# # For a production setup, replace it with a database setup that persists your data.
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: postgres
#   labels:
#     app: postgres
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: postgres
#   template:
#     metadata:
#       labels:
#         app: postgres
#     spec:
#       containers:
#         - name: postgres
#           image: mirror.gcr.io/postgres:17
#           env:
#             - name: POSTGRES_USER
#               value: "keycloak"
#             - name: POSTGRES_PASSWORD
#               value: "keycloak"
#             - name: POSTGRES_DB
#               value: "keycloak"
#             - name: POSTGRES_LOG_STATEMENT
#               value: "all"
#           ports:
#             - name: postgres
#               containerPort: 5432
#           volumeMounts:
#             # Using volume mount for PostgreSQL's data folder as it is otherwise not writable
#             - name: postgres-data
#               mountPath: /var/lib/postgresql/data
#       volumes:
#         - name: postgres-data
#           emptyDir: {}
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: postgres
#   name: postgres
# spec:
#   selector:
#     app: postgres
#   ports:
#     - protocol: TCP
#       port: 5432
#       targetPort: 5432
#   type: ClusterIP
